# discord-cms

./: .gitignore  Dockerfile  Makefile  README.md  config_template.json  docker-compose-dev.yml  docker-compose.yml  example.env  prod.docker-compose.yml  pyproject.toml
cms_bot/: Dockerfile  docker-entrypoint.sh  prod.Dockerfile  pyproject.toml
cms_bot/cms_bot/: __main__.py  main.py
cms_bot/cms_bot/bot/: bot.py  updater.py
cms_bot/cms_bot/crud/: __init__.py  models.py
cms_bot/cms_bot/util/: config.py
dcms/: Dockerfile  docker-entrypoint.sh  prod.Dockerfile  pyproject.toml
dcms/dcms/: __init__.py  __main__.py  client.py  dcms.py  schemas.py
dcms/dcms/crud/: __init__.py  base.py  models.py
discord-cms/: database.py  main.py  models.py
discord-cms/bot/: bot.py
discord-cms/crud/: __init__.py  base.py
discord-cms/util/: config.py  log.py
frontend/: Dockerfile  package.json  prod.Dockerfile
frontend/src/: App.js  authProvider.js
frontend/src/components/: LoginForm.js
frontend/src/resources/: Guilds.js  Messages.js
orm/: pyproject.toml
orm/orm/crud/: __init__.py
postgres/: Dockerfile
traefik/rules/: certificates.toml
