[tool.poetry]
name = "orm"
version = "0.1.0"
description = "ORM for Discord CMS"
authors = ["Charles de Freitas <me@chasbob.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
